--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "date-fns": "^2.29.3",
+    "mathjs": "^14.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
